# SmallHttpServer

./: Buffer.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  DaemonHelper.h  Exceptions.h  HTTPPacket.cpp  HTTPPacket.h  Logger.cpp  Logger.h  Makefile  Options.cpp  Options.h  README.md  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  Socket.h  SocketHelper.cpp  SocketHelper.h  TLSContext.cpp  TLSContext.h  TLSSocket.cpp  TLSSocket.h  Tests.h  ThreadSafeStack.cpp  ThreadSafeStack.h  Worker.cpp  Worker.h  config.json  main.cpp  mainTests.cpp
Tests/: SndRcvTest.h  TLSTests.h
certificates/: cert.pem  generate.sh  key.pem
html/: exam2.html  index.html
